Add uptimer to upgrade testing
Co-authored-by: Andrew Wittrock <awittrock@pivotal.io>

--- a/ci/pipelines/toolsmiths-upgrade-test.yml
+++ b/ci/pipelines/toolsmiths-upgrade-test.yml
@@ -145,6 +145,12 @@ jobs:
         operations/scale-database-cluster.yml
         operations/use-internal-lookup-for-route-services.yml
         operations/experimental/colocate-smoke-tests-on-cc-worker.yml
+      DEPLOY_WITH_UPTIME_MEASUREMENTS: true
+      FAIL_ON_DOWNTIME: true
+      HTTP_AVAILABILITY_THRESHOLD: 0
+      APP_PUSHABILITY_THRESHOLD: 10
+      RECENT_LOGS_THRESHOLD: 10000
+      STREAMING_LOGS_THRESHOLD: 10000
   - in_parallel:
     - task: open-asgs-for-credhub
       file: cf-deployment-concourse-tasks/open-asgs-for-bosh-instance-group/task.yml
